// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Language List Overlay renders correctly 1`] = `
<div
  class="ecl-language-list ecl-language-list--overlay"
  data-ecl-language-list-overlay=""
>
  <div
    class="ecl-language-list__container ecl-container"
  >
    <div
      class="ecl-row"
    >
      <div
        class="ecl-language-list__close ecl-col-12 ecl-col-lg-8 ecl-offset-lg-2"
      >
        <button
          class="ecl-button ecl-button--ghost ecl-language-list__close-button"
          data-ecl-language-list-close=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label=""
            >
              Close
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
              focusable="false"
            >
              <use
                xlink:href="/static/icons.svg#ui--close"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="ecl-language-list__title ecl-col-12 ecl-col-lg-8 ecl-offset-lg-2"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-language-list__title-icon"
          focusable="false"
        >
          <use
            xlink:href="/static/icons.svg#general--generic-lang"
          />
        </svg>
        Select your language
      </div>
    </div>
    <div
      class="ecl-row"
    >
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_bg"
              hreflang="bg"
              lang="bg"
              rel="alternate"
            >
              български
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_es"
              hreflang="es"
              lang="es"
              rel="alternate"
            >
              español
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_cs"
              hreflang="cs"
              lang="cs"
              rel="alternate"
            >
              čeština
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_da"
              hreflang="da"
              lang="da"
              rel="alternate"
            >
              dansk
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_de"
              hreflang="de"
              lang="de"
              rel="alternate"
            >
              Deutsch
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_et"
              hreflang="et"
              lang="et"
              rel="alternate"
            >
              eesti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_el"
              hreflang="el"
              lang="el"
              rel="alternate"
            >
              ελληνικά
            </a>
          </li>
          <li
            class="ecl-language-list__item ecl-language-list__item--is-active"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
              href="/example#language_en"
              hreflang="en"
              lang="en"
              rel="alternate"
            >
              <span
                class="ecl-link__label"
              >
                English
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/static/icons.svg#ui--check"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fr"
              hreflang="fr"
              lang="fr"
              rel="alternate"
            >
              français
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ga"
              hreflang="ga"
              lang="ga"
              rel="alternate"
            >
              Gaeilge
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hr"
              hreflang="hr"
              lang="hr"
              rel="alternate"
            >
              hrvatski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_it"
              hreflang="it"
              lang="it"
              rel="alternate"
            >
              italiano
            </a>
          </li>
        </ul>
      </div>
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lv"
              hreflang="lv"
              lang="lv"
              rel="alternate"
            >
              latviešu
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lt"
              hreflang="lt"
              lang="lt"
              rel="alternate"
            >
              lietuvių
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hu"
              hreflang="hu"
              lang="hu"
              rel="alternate"
            >
              magyar
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_mt"
              hreflang="mt"
              lang="mt"
              rel="alternate"
            >
              Malti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_nl"
              hreflang="nl"
              lang="nl"
              rel="alternate"
            >
              Nederlands
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pl"
              hreflang="pl"
              lang="pl"
              rel="alternate"
            >
              polski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pt"
              hreflang="pt"
              lang="pt"
              rel="alternate"
            >
              português
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ro"
              hreflang="ro"
              lang="ro"
              rel="alternate"
            >
              română
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sk"
              hreflang="sk"
              lang="sk"
              rel="alternate"
            >
              slovenčina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sl"
              hreflang="sl"
              lang="sl"
              rel="alternate"
            >
              slovenščina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fi"
              hreflang="fi"
              lang="fi"
              rel="alternate"
            >
              suomi
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sv"
              hreflang="sv"
              lang="sv"
              rel="alternate"
            >
              svenska
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EC - Language List Overlay renders correctly with extra attributes 1`] = `
<div
  class="ecl-language-list ecl-language-list--overlay"
  data-ecl-language-list-overlay=""
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-language-list__container ecl-container"
  >
    <div
      class="ecl-row"
    >
      <div
        class="ecl-language-list__close ecl-col-12 ecl-col-lg-8 ecl-offset-lg-2"
      >
        <button
          class="ecl-button ecl-button--ghost ecl-language-list__close-button"
          data-ecl-language-list-close=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label=""
            >
              Close
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
              focusable="false"
            >
              <use
                xlink:href="/static/icons.svg#ui--close"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="ecl-language-list__title ecl-col-12 ecl-col-lg-8 ecl-offset-lg-2"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-language-list__title-icon"
          focusable="false"
        >
          <use
            xlink:href="/static/icons.svg#general--generic-lang"
          />
        </svg>
        Select your language
      </div>
    </div>
    <div
      class="ecl-row"
    >
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_bg"
              hreflang="bg"
              lang="bg"
              rel="alternate"
            >
              български
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_es"
              hreflang="es"
              lang="es"
              rel="alternate"
            >
              español
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_cs"
              hreflang="cs"
              lang="cs"
              rel="alternate"
            >
              čeština
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_da"
              hreflang="da"
              lang="da"
              rel="alternate"
            >
              dansk
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_de"
              hreflang="de"
              lang="de"
              rel="alternate"
            >
              Deutsch
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_et"
              hreflang="et"
              lang="et"
              rel="alternate"
            >
              eesti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_el"
              hreflang="el"
              lang="el"
              rel="alternate"
            >
              ελληνικά
            </a>
          </li>
          <li
            class="ecl-language-list__item ecl-language-list__item--is-active"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
              href="/example#language_en"
              hreflang="en"
              lang="en"
              rel="alternate"
            >
              <span
                class="ecl-link__label"
              >
                English
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/static/icons.svg#ui--check"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fr"
              hreflang="fr"
              lang="fr"
              rel="alternate"
            >
              français
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ga"
              hreflang="ga"
              lang="ga"
              rel="alternate"
            >
              Gaeilge
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hr"
              hreflang="hr"
              lang="hr"
              rel="alternate"
            >
              hrvatski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_it"
              hreflang="it"
              lang="it"
              rel="alternate"
            >
              italiano
            </a>
          </li>
        </ul>
      </div>
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lv"
              hreflang="lv"
              lang="lv"
              rel="alternate"
            >
              latviešu
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lt"
              hreflang="lt"
              lang="lt"
              rel="alternate"
            >
              lietuvių
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hu"
              hreflang="hu"
              lang="hu"
              rel="alternate"
            >
              magyar
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_mt"
              hreflang="mt"
              lang="mt"
              rel="alternate"
            >
              Malti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_nl"
              hreflang="nl"
              lang="nl"
              rel="alternate"
            >
              Nederlands
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pl"
              hreflang="pl"
              lang="pl"
              rel="alternate"
            >
              polski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pt"
              hreflang="pt"
              lang="pt"
              rel="alternate"
            >
              português
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ro"
              hreflang="ro"
              lang="ro"
              rel="alternate"
            >
              română
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sk"
              hreflang="sk"
              lang="sk"
              rel="alternate"
            >
              slovenčina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sl"
              hreflang="sl"
              lang="sl"
              rel="alternate"
            >
              slovenščina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fi"
              hreflang="fi"
              lang="fi"
              rel="alternate"
            >
              suomi
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sv"
              hreflang="sv"
              lang="sv"
              rel="alternate"
            >
              svenska
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EC - Language List Overlay renders correctly with extra class names 1`] = `
<div
  class="ecl-language-list ecl-language-list--overlay custom-class custom-class--test"
  data-ecl-language-list-overlay=""
>
  <div
    class="ecl-language-list__container ecl-container"
  >
    <div
      class="ecl-row"
    >
      <div
        class="ecl-language-list__close ecl-col-12 ecl-col-lg-8 ecl-offset-lg-2"
      >
        <button
          class="ecl-button ecl-button--ghost ecl-language-list__close-button"
          data-ecl-language-list-close=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label=""
            >
              Close
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--s ecl-button__icon ecl-button__icon--after"
              focusable="false"
            >
              <use
                xlink:href="/static/icons.svg#ui--close"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="ecl-language-list__title ecl-col-12 ecl-col-lg-8 ecl-offset-lg-2"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-language-list__title-icon"
          focusable="false"
        >
          <use
            xlink:href="/static/icons.svg#general--generic-lang"
          />
        </svg>
        Select your language
      </div>
    </div>
    <div
      class="ecl-row"
    >
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_bg"
              hreflang="bg"
              lang="bg"
              rel="alternate"
            >
              български
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_es"
              hreflang="es"
              lang="es"
              rel="alternate"
            >
              español
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_cs"
              hreflang="cs"
              lang="cs"
              rel="alternate"
            >
              čeština
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_da"
              hreflang="da"
              lang="da"
              rel="alternate"
            >
              dansk
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_de"
              hreflang="de"
              lang="de"
              rel="alternate"
            >
              Deutsch
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_et"
              hreflang="et"
              lang="et"
              rel="alternate"
            >
              eesti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_el"
              hreflang="el"
              lang="el"
              rel="alternate"
            >
              ελληνικά
            </a>
          </li>
          <li
            class="ecl-language-list__item ecl-language-list__item--is-active"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
              href="/example#language_en"
              hreflang="en"
              lang="en"
              rel="alternate"
            >
              <span
                class="ecl-link__label"
              >
                English
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/static/icons.svg#ui--check"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fr"
              hreflang="fr"
              lang="fr"
              rel="alternate"
            >
              français
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ga"
              hreflang="ga"
              lang="ga"
              rel="alternate"
            >
              Gaeilge
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hr"
              hreflang="hr"
              lang="hr"
              rel="alternate"
            >
              hrvatski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_it"
              hreflang="it"
              lang="it"
              rel="alternate"
            >
              italiano
            </a>
          </li>
        </ul>
      </div>
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lv"
              hreflang="lv"
              lang="lv"
              rel="alternate"
            >
              latviešu
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lt"
              hreflang="lt"
              lang="lt"
              rel="alternate"
            >
              lietuvių
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hu"
              hreflang="hu"
              lang="hu"
              rel="alternate"
            >
              magyar
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_mt"
              hreflang="mt"
              lang="mt"
              rel="alternate"
            >
              Malti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_nl"
              hreflang="nl"
              lang="nl"
              rel="alternate"
            >
              Nederlands
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pl"
              hreflang="pl"
              lang="pl"
              rel="alternate"
            >
              polski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pt"
              hreflang="pt"
              lang="pt"
              rel="alternate"
            >
              português
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ro"
              hreflang="ro"
              lang="ro"
              rel="alternate"
            >
              română
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sk"
              hreflang="sk"
              lang="sk"
              rel="alternate"
            >
              slovenčina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sl"
              hreflang="sl"
              lang="sl"
              rel="alternate"
            >
              slovenščina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fi"
              hreflang="fi"
              lang="fi"
              rel="alternate"
            >
              suomi
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sv"
              hreflang="sv"
              lang="sv"
              rel="alternate"
            >
              svenska
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EC - Language List Splash renders correctly 1`] = `
<div
  class="ecl-language-list ecl-language-list--splash"
>
  <header
    class="ecl-language-list__header"
  >
    <img
      alt="European Commission logo"
      class="ecl-language-list__logo"
      src="/static/logo--mute.svg"
    />
  </header>
  <div
    class="ecl-language-list__container ecl-container"
  >
    <div
      class="ecl-row"
    >
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_bg"
              hreflang="bg"
              lang="bg"
            >
              български
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_es"
              hreflang="es"
              lang="es"
            >
              español
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_cs"
              hreflang="cs"
              lang="cs"
            >
              čeština
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_da"
              hreflang="da"
              lang="da"
            >
              dansk
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_de"
              hreflang="de"
              lang="de"
            >
              Deutsch
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_et"
              hreflang="et"
              lang="et"
            >
              eesti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_el"
              hreflang="el"
              lang="el"
            >
              ελληνικά
            </a>
          </li>
          <li
            class="ecl-language-list__item ecl-language-list__item--is-active"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
              href="/example#language_en"
              hreflang="en"
              lang="en"
            >
              <span
                class="ecl-link__label"
              >
                English
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/static/icons.svg#ui--check"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fr"
              hreflang="fr"
              lang="fr"
            >
              français
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ga"
              hreflang="ga"
              lang="ga"
            >
              Gaeilge
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hr"
              hreflang="hr"
              lang="hr"
            >
              hrvatski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_it"
              hreflang="it"
              lang="it"
            >
              italiano
            </a>
          </li>
        </ul>
      </div>
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lv"
              hreflang="lv"
              lang="lv"
            >
              latviešu
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lt"
              hreflang="lt"
              lang="lt"
            >
              lietuvių
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hu"
              hreflang="hu"
              lang="hu"
            >
              magyar
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_mt"
              hreflang="mt"
              lang="mt"
            >
              Malti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_nl"
              hreflang="nl"
              lang="nl"
            >
              Nederlands
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pl"
              hreflang="pl"
              lang="pl"
            >
              polski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pt"
              hreflang="pt"
              lang="pt"
            >
              português
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ro"
              hreflang="ro"
              lang="ro"
            >
              română
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sk"
              hreflang="sk"
              lang="sk"
            >
              slovenčina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sl"
              hreflang="sl"
              lang="sl"
            >
              slovenščina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fi"
              hreflang="fi"
              lang="fi"
            >
              suomi
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sv"
              hreflang="sv"
              lang="sv"
            >
              svenska
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EC - Language List Splash renders correctly with extra attributes 1`] = `
<div
  class="ecl-language-list ecl-language-list--splash"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <header
    class="ecl-language-list__header"
  >
    <img
      alt="European Commission logo"
      class="ecl-language-list__logo"
      src="/static/logo--mute.svg"
    />
  </header>
  <div
    class="ecl-language-list__container ecl-container"
  >
    <div
      class="ecl-row"
    >
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_bg"
              hreflang="bg"
              lang="bg"
            >
              български
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_es"
              hreflang="es"
              lang="es"
            >
              español
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_cs"
              hreflang="cs"
              lang="cs"
            >
              čeština
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_da"
              hreflang="da"
              lang="da"
            >
              dansk
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_de"
              hreflang="de"
              lang="de"
            >
              Deutsch
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_et"
              hreflang="et"
              lang="et"
            >
              eesti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_el"
              hreflang="el"
              lang="el"
            >
              ελληνικά
            </a>
          </li>
          <li
            class="ecl-language-list__item ecl-language-list__item--is-active"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
              href="/example#language_en"
              hreflang="en"
              lang="en"
            >
              <span
                class="ecl-link__label"
              >
                English
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/static/icons.svg#ui--check"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fr"
              hreflang="fr"
              lang="fr"
            >
              français
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ga"
              hreflang="ga"
              lang="ga"
            >
              Gaeilge
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hr"
              hreflang="hr"
              lang="hr"
            >
              hrvatski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_it"
              hreflang="it"
              lang="it"
            >
              italiano
            </a>
          </li>
        </ul>
      </div>
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lv"
              hreflang="lv"
              lang="lv"
            >
              latviešu
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lt"
              hreflang="lt"
              lang="lt"
            >
              lietuvių
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hu"
              hreflang="hu"
              lang="hu"
            >
              magyar
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_mt"
              hreflang="mt"
              lang="mt"
            >
              Malti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_nl"
              hreflang="nl"
              lang="nl"
            >
              Nederlands
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pl"
              hreflang="pl"
              lang="pl"
            >
              polski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pt"
              hreflang="pt"
              lang="pt"
            >
              português
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ro"
              hreflang="ro"
              lang="ro"
            >
              română
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sk"
              hreflang="sk"
              lang="sk"
            >
              slovenčina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sl"
              hreflang="sl"
              lang="sl"
            >
              slovenščina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fi"
              hreflang="fi"
              lang="fi"
            >
              suomi
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sv"
              hreflang="sv"
              lang="sv"
            >
              svenska
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`EC - Language List Splash renders correctly with extra class names 1`] = `
<div
  class="ecl-language-list ecl-language-list--splash custom-class custom-class--test"
>
  <header
    class="ecl-language-list__header"
  >
    <img
      alt="European Commission logo"
      class="ecl-language-list__logo"
      src="/static/logo--mute.svg"
    />
  </header>
  <div
    class="ecl-language-list__container ecl-container"
  >
    <div
      class="ecl-row"
    >
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4 ecl-offset-lg-2"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_bg"
              hreflang="bg"
              lang="bg"
            >
              български
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_es"
              hreflang="es"
              lang="es"
            >
              español
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_cs"
              hreflang="cs"
              lang="cs"
            >
              čeština
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_da"
              hreflang="da"
              lang="da"
            >
              dansk
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_de"
              hreflang="de"
              lang="de"
            >
              Deutsch
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_et"
              hreflang="et"
              lang="et"
            >
              eesti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_el"
              hreflang="el"
              lang="el"
            >
              ελληνικά
            </a>
          </li>
          <li
            class="ecl-language-list__item ecl-language-list__item--is-active"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-language-list__link"
              href="/example#language_en"
              hreflang="en"
              lang="en"
            >
              <span
                class="ecl-link__label"
              >
                English
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/static/icons.svg#ui--check"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fr"
              hreflang="fr"
              lang="fr"
            >
              français
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ga"
              hreflang="ga"
              lang="ga"
            >
              Gaeilge
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hr"
              hreflang="hr"
              lang="hr"
            >
              hrvatski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_it"
              hreflang="it"
              lang="it"
            >
              italiano
            </a>
          </li>
        </ul>
      </div>
      <div
        class="ecl-language-list__column ecl-col-12 ecl-col-lg-4"
      >
        <ul
          class="ecl-language-list__list"
        >
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lv"
              hreflang="lv"
              lang="lv"
            >
              latviešu
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_lt"
              hreflang="lt"
              lang="lt"
            >
              lietuvių
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_hu"
              hreflang="hu"
              lang="hu"
            >
              magyar
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_mt"
              hreflang="mt"
              lang="mt"
            >
              Malti
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_nl"
              hreflang="nl"
              lang="nl"
            >
              Nederlands
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pl"
              hreflang="pl"
              lang="pl"
            >
              polski
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_pt"
              hreflang="pt"
              lang="pt"
            >
              português
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_ro"
              hreflang="ro"
              lang="ro"
            >
              română
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sk"
              hreflang="sk"
              lang="sk"
            >
              slovenčina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sl"
              hreflang="sl"
              lang="sl"
            >
              slovenščina
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_fi"
              hreflang="fi"
              lang="fi"
            >
              suomi
            </a>
          </li>
          <li
            class="ecl-language-list__item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-language-list__link"
              href="/example#language_sv"
              hreflang="sv"
              lang="sv"
            >
              svenska
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
